--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
 
-    <title>Document</title>
+    <title>JS-CHAPTER 5</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <label for="fruit">ENTER</label><br>
+    <input type="text" id="fruit" value="" placeholder="ENTER FRUIT YOU WANT"><br>
+    <button type="submit" onclick="control()">FIND</button>  
+   <script src="app.js"></script>
 
-    <script src="app.js"></script>
 </body>
 </html>
+
